testsuite/negative/tyvars.n
class A [a, a] { } // E: duplicate type parameter `a'

class B [x] //H: type parameters are inherited in nested types and can be used without declaring them explicitly
{
  class C [x] { } // E: type parameter `x' has the same name as type parameter from the outer type `B\.*\[x\]'
}

enum E [X] { // E: enums cannot have generic type parameters
   | A | B   
}